<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WIP Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="edit_code">Enter Code</string>
    <string name="pallet_enter">Pallet Enter</string>
    <string name="altag_enter">Alt Tag Enter</string>
    <string name="edit_email">Email</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_login">Login</string>
    <string name="button_send_email">Send</string>
    <string name="button_go_cameratool">Camera Tool</string>
    <string name="button_quality_control">Quality Control</string>
    <string name="button_floor_management">Floor Management</string>
    <string name="button_place_pallet">Place Pallet</string>
    <string name="button_inquiry_location">Inquiry</string>
    <string name="button_inventory">Physical Inventory</string>
    <string name="button_alttag">Enter Alt Tag</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_fgpass">Forgot your password?</string>
    <string name="button_picture">Picture</string>
    <string name="button_restart">Restart</string>
    <string name="title_activity_display_manifest">DisplayManifestActivity</string>
    <string name="textview_referenceno">Reference No:</string>
    <string name="textview_auxiliarreference">PO:</string>
    <string name="textview_shipperid">Shipper Id:</string>
    <string name="textview_truckno">Truck No:</string>
    <string name="textview_receiptdate">Receipt Date:</string>
    <string name="sample_textview">Sample?</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="button_ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_full_screen_view">FullScreenViewActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="title_activity_temperature_grower_plus">TemperatureGrowerPlusActivity</string>
    <string name="textview_temperature">Temperature:</string>
    <string name="textview_grower">Grower:</string>
    <string name="textview_plus">Plu\'s</string>
    <string name="edit_temperature">Enter Temperature</string>
    <string name="edit_grower">Enter Grower</string>
    <string name="edit_plus">Enter</string>
    <string name="preference_file_key">com.products.qc.PREFERENCE_FILE_KEY</string>
    <string name="toast_preference_ftp_port_validation">FTP port must be an integer between 1 and 65535</string>
    <string name="toast_preference_ftp_address_validation">FTP address format is incorrect</string>
    <string name="saved_warehouse">com.products.qc.warehouse</string>
    <string name="saved_warehouse_customer">com.products.qc.warehousecustomer</string>
    <string name="saved_referenceno">com.products.qc.referenceno</string>
    <string name="saved_lot">com.products.qc.lot</string>
    <string name="saved_description">com.products.qc.lot</string>
    <string name="saved_auxiliarreference">com.products.qc.auxiliarreference</string>
    <string name="saved_shipperid">com.products.qc.shipperid</string>
    <string name="saved_truckno">com.products.qc.truckno</string>
    <string name="saved_receiptdate">com.products.qc.receiptdate</string>
    <string name="saved_current_pallet">com.products.qc.currentpallet</string>
    <string name="saved_current_sampling">com.products.qc.currentsampling</string>
    <string name="saved_begin_date">com.products.qc.begindate</string>
    <string name="saved_finish_date">com.products.qc.finishdate</string>
    <string name="saved_incoming_id">com.products.qc.incomingid</string>
    <string name="saved_manifest_id">com.products.qc.manifestid</string>

    <string name="saved_saveqcontrol">com.products.qc.saveqcontrol</string>
    <string name="saved_saveqcontroldetail">com.products.qc.saveqcontroldetail</string>
    <string name="saved_saveqcontroldetailfactor">com.products.qc.saveqcontroldetailfactor</string>
    <string name="saved_saveqcontroldetailpicture">com.products.qc.saveqcontroldetailpicture</string>
    <string name="saved_responsecontrol">com.products.qc.responsecontrol</string>
    <string name="saved_responsecontroldetail">com.products.qc.responsecontroldetail</string>
    <string name="saved_pallettag">com.products.qc.pallettag</string>

    <string name="title_activity_qc_factor_table">QcFactorTableActivity</string>
    <string name="toast_error_sendindg_data">Something wrong. Try again</string>
    <string name="toast_error_saving_file">Error saving picture. Try again</string>
    <string name="toast_error_ftp_connection">Error connecting with the FTP server. Try again</string>

    <string-array name="factor_types_array">
        <item>Q</item>
        <item>C</item>
        <item>QC</item>
    </string-array>
    <string-array name="measurements">
        <item>"Enter Measurement"</item>
        <item>1/16</item>
        <item>2/16</item>
        <item>3/16</item>
        <item>4/16</item>
        <item>5/16</item>
        <item>6/16</item>
        <item>7/16</item>
        <item>8/16</item>
        <item>9/16</item>
        <item>10/16</item>
        <item>11/16</item>
        <item>12/16</item>
        <item>13/16</item>
        <item>14/16</item>
        <item>15/16</item>
    </string-array>

    <string name="title_activity_button_type1">ButtonType1Activity</string>
    <string name="title_activity_button_type2">ButtonType2Activity</string>
    <string name="title_activity_brix_pressure_measurements">BrixPressureMeasurementsActivity</string>
    <string name="textview_brix">Brix:</string>
    <string name="textview_pressure">Pressure:</string>
    <string name="textview_measurements">Measurements:</string>
    <string name="textview_user">User:</string>
    <string name="user">User</string>
    <string name="textview_password">Password:</string>
    <string name="password">Password</string>
    <string name="edit_brix">Enter Brix</string>
    <string name="edit_pressure">Enter Pressure</string>
    <string name="edit_measurements">Enter Measurements</string>
    <string name="edit_user">Enter User</string>
    <string name="edit_password">Enter Password</string>
    <string name="edit_button_back">Back</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="camera_preview">CameraPreview</string>
    <string name="button_capture">Capture</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_inquire_location">Inquire</string>
    <string name="check_pallet">Pallet</string>
    <string name="check_location">Location</string>
    <string name="check_lot">Lot</string>
    <string name="title_activity_inquire_location51">Inquire</string>
    <string name="location_description">Rack:</string>
    <string name="pallet_inv_qty">InvQty:</string>
    <string name="pallet_balance_qty">BalanceQty:</string>
    <string name="pallet_rack">Rack:</string>
    <string name="pallet_lot">Lot:</string>
    <string name="pallet_size">Size:</string>
    <string name="title_activity_inquire_location52">Inquire</string>
    <string name="enter_rack_id">Enter Rack</string>
    <string name="quantity">Quantity:</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Tag</string>
    <string name="title_activity_login_recuperation">Login Recovery</string>
    <string name="title_activity_choice_tools">Warehouse Management</string>
    <string name="title_activity_warehouse_management">Warehouse Management</string>
    <string name="title_activity_pallet_introduction">Pallet Introduction</string>
    <string name="title_activity_location_introduction">Location Introduction</string>

    <string name="location_enter">Enter Location</string>
    <string name="total_balance_qty">Total BalanceQty:</string>
    <string name="pallet_id">Tag:</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="rack_id">Rack:</string>
    <string name="title_activity_rack_inventory">Rack Inventory</string>
    <string name="title_activity_altag_pallet">Tag</string>
    <string name="title_activity_altag_altag">Alternative Tag</string>
    <string name="title_activity_inquire_location53">Lot Inquiry</string>
    <string name="lot_string">Lot</string>
    <string name="tag_string">Tag</string>
    <string name="cameras_string">Cameras</string>
    <string name="menu_camera_tool_ip">Cameras IP</string>
    <string name="menu_ftp_settings">FTP Settings</string>
    <string name="menu_upload_pic_ftp">Upload to FTP</string>
    <string name="camera_ip">http://xx.xx.xx.xx:port/mjpeg.cgi</string>
    <string name="camera_name">Camera Name</string>
    <string name="title_activity_cameras_setting">IP Cameras</string>
    <string name="title_activity_one_camera_setting">Add Camera</string>
    <string name="edit_string">Edit</string>
    <string name="dialog_sure">Are you sure?</string>
    <string name="toast_camera_name_or_ip_empty">Camera must have name and ip</string>
    <string name="toast_camera_name_empty">Enter Camera name</string>
    <string name="toast_camera_ip_empty">Enter Camera ip</string>
    <string name="toast_camera_ip_wrong">Enter a correct Camera ip</string>
    <string name="toast_empty_lot">Enter Lot</string>
    <string name="toast_empty_tag">Enter Tag</string>
    <string name="toast_file_uploaded_ftp">Picture successfully upload!</string>
    <string name="title_activity_camera_visualization">CameraVisualizationActivity</string>
    <string name="title_activity_show_cam_ip_pict">ShowCamIpPictActivity</string>
    <string name="title_activity_ftpsettings">FTP Settings</string>

</resources>
