<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        
        <TableRow 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
    		
            <TextView
		        android:id="@+id/textview_brix"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/textview_brix"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:layout_gravity="right" />
            
            <EditText
			        android:id="@+id/edit_brix"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/edit_brix" 
			        android:inputType="numberDecimal" />
		</TableRow>
		<TableRow 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
            
		    <TextView
			        android:id="@+id/textview_pressure"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/textview_pressure"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:layout_gravity="right" />
		    
		    <EditText
			        android:id="@+id/edit_pressure"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/edit_pressure" 
			        android:inputType="numberDecimal" />
		    
        </TableRow>
        <TableRow 
        	android:layout_width="wrap_content"
   			android:layout_height="wrap_content">
		    
            <TextView
		        android:id="@+id/textview_measurements"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/textview_measurements"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <Spinner
		        android:id="@+id/edit_measurements"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/edit_measurements" />
			    
        </TableRow>
        <TableRow 
        	android:layout_width="wrap_content"
   			android:layout_height="wrap_content">
            <RelativeLayout 
                android:layout_width="wrap_content"
   				android:layout_height="wrap_content">
                
            </RelativeLayout>
            
		    <LinearLayout 
	                android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"
	   				android:orientation="horizontal">
	            
		        <Button
			        android:id="@+id/button_back"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/edit_button_back"
			        android:onClick="back" />
				        
			    <Button
			        android:id="@+id/button_next"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/button_next"
			        android:onClick="next"
			        android:layout_gravity="right"/>
		        
	        </LinearLayout> 
        </TableRow>      
	</TableLayout>
</RelativeLayout>