<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_place_pallet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_place_pallet"
            android:onClick="placePallet"/>

        <Button
            android:id="@+id/button_inquiry_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_inquiry_location"
            android:onClick="inquiryLocation"
            android:layout_gravity="right"/>

        <Button
            android:id="@+id/button_unlocate_pallet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_inventory"
            android:onClick="unlocatePallet" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_button_back"
            android:onClick="back"/>
    </LinearLayout>
</RelativeLayout>