<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_user"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="right" />

            <EditText
                android:id="@+id/edit_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_user"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="right" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="textPassword" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">




        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_fgpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_fgpass"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:onClick="recLogin" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_login"
                    android:onClick="login"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="left"/>

            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>