<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <ListView
		android:id="@+id/manifest_listview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:layout_weight="1" >

    </ListView>
       
	<TextView
		 android:id="@+id/sample_textview"
		 android:layout_width="fill_parent"
		 android:layout_height="fill_parent"
		 android:gravity="center"
		 android:text="@string/sample_textview"
		 android:textAppearance="?android:attr/textAppearanceLarge" 
		 android:layout_weight="4" />
       
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="4">
        
	    <LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_centerInParent="true">
			
			<Button
			    android:id="@+id/button_no"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/button_no"
			    android:onClick="back" 
			    android:gravity="center" />
			        
			<Button
				android:id="@+id/button_yes"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_yes"
				android:onClick="next" />
		
        </LinearLayout>
	</RelativeLayout>
</LinearLayout>