<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        
        <TableRow 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
    		
            <TextView
		        android:id="@+id/textview_temperature"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/textview_temperature"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:layout_gravity="right" />
            
            <EditText
			        android:id="@+id/edit_temperature"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/edit_temperature" 
			        android:inputType="numberDecimal" />
		</TableRow>
		<TableRow 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
            
		    <TextView
			        android:id="@+id/textview_grower"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/textview_grower"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:layout_gravity="right" />
		    
		    <EditText
			        android:id="@+id/edit_grower"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/edit_grower"
			        android:singleLine="true"
			        android:imeOptions="actionDone" />
		    
        </TableRow>
        <TableRow 
        	android:layout_width="wrap_content"
   			android:layout_height="wrap_content">
		    
            <CheckBox
			        android:id="@+id/textview_plus"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/textview_plus"
			        android:textAppearance="?android:attr/textAppearanceLarge" 
			        android:onClick="percentEnableDisable"
			        android:layout_gravity="right" />
            
            <LinearLayout 
                android:layout_width="wrap_content"
   				android:layout_height="wrap_content"
   				android:orientation="horizontal">
                
                <EditText
			        android:id="@+id/edit_plus"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/edit_plus" 
			        android:inputType="number"/>
			    
			    <TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="%"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:imeOptions="actionDone"  />
			    
            </LinearLayout>
        </TableRow>
        <TableRow 
        	android:layout_width="wrap_content"
   			android:layout_height="wrap_content">
            <RelativeLayout 
                android:layout_width="wrap_content"
   				android:layout_height="wrap_content">
                
            </RelativeLayout>
            
		    <LinearLayout 
	                android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"
	   				android:orientation="horizontal">
	            
		        <Button
			        android:id="@+id/button_back"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="Back"
			        android:onClick="back" />
				        
			    <Button
			        android:id="@+id/button_next"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="Next"
			        android:onClick="next"
			        android:layout_gravity="right"/>
		        
	        </LinearLayout> 
        </TableRow>      
	</TableLayout>
</RelativeLayout>
